objects/Transaction_Management__c.object
<CustomObject>
    <fields>
        <fullName>ANI__c</fullName>
        <label>ANI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallID__c</fullName>
        <label>CallID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactChannel__c</fullName>
        <label>ContactChannel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Direction__c</fullName>
        <description>Need to be discussed.</description>
        <label>Contact Direction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Managements</relationshipLabel>
        <relationshipName>Transaction_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Chat Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Call(Add Details To CCC/Agent Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hang Up/ Dead Air Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prank Caller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prank Caller/ Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Callback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Operating_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating Company</label>
        <referenceTo>Operating_Company__c</referenceTo>
        <relationshipLabel>Transaction Managements</relationshipLabel>
        <relationshipName>Transaction_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TFN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DNIS</label>
        <referenceTo>TFN__c</referenceTo>
        <relationshipLabel>Transaction Managements</relationshipLabel>
        <relationshipName>Transaction_Managements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Transaction Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Operating_Company__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>